--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <body>
         <table border="2" cellspacing ="0" bgcolor="lightblue"> 
             <tr>
-                <th colspan='4' bgcolor="green" height='10' <h1><center><b>welcome</h1></center></th>
+                <th colspan='4' bgcolor="red" height='10' <h1><center><b>welcome</h1></center></th>
             </tr>
             <tr>
                 <td>enjoy</td>
