--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
                 <th colspan='4' bgcolor="red" height='10' <h1><center><b>welcome</h1></center></th>
             </tr>
             <tr>
-                <td>enjoy</td>
+                <td>huruma</td>
                 <td>math </td>
                 <td>history </td>
                 <td>math</td>
