--- a/table.html
+++ b/table.html
@@ -6,19 +6,7 @@
     <body>
         <table border="2" cellspacing ="0" bgcolor="lightblue"> 
             <tr>
-                <th colspan='4' bgcolor="red" height='10' <h1><center><b>welcome</h1></center></th>
-            </tr>
-            <tr>
-                <td>chemistry</td>
-                <td>math </td>
-                <td>history </td>
-                <td>math</td>
-            </tr>
-            <tr> 
-                <td rowspan="3">enjoy</td>
-                <td>kiswahili</td>
-                <td>english</td>
-                <td>civics</td>
+                <th colspan='4' bgcolor="red" height='10' <h1><center><b>welcome</history
             </tr>
             <tr>
                 <td>bios</td>
@@ -31,7 +19,7 @@
                 <td>math</td>
                 <td>history</td>
                 <td>bios</td>
-                <td>chemis</td>
+                <td>bios</td>
             </tr>
            
         </table>
